--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Tailwind: About Me</title>
+  <title>About Me | Bayu Widia Santoso</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.6.2/tailwind.min.css'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&amp;display=swap'><link rel="stylesheet" href="./style.css">
 
