--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>&nbsp;&nbsp;<span class="text-pink-500">return</span> {</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;name: <span class="text-yellow-300">'Bayu Widia Santoso'</span>,</p>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;position: <span class="text-yellow-300">'fullstack-developer'</span>,</p>
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;website: <span class="text-yellow-300">'<a href="https://www.linkedin.com/in/bayuwidiasantoso" target="_blank" class="text-yellow-300 hover:underline focus:border-none">https://scottwindon.com</a>'</span>,</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;website: <span class="text-yellow-300">'<a href="https://www.linkedin.com/in/bayuwidiasantoso" target="_blank" class="text-yellow-300 hover:underline focus:border-none">https://www.linkedin.com/in/bayuwidiasantoso</a>'</span>,</p>
             <p>&nbsp;&nbsp;}</p>
             <p>}</p>
         </div>
