--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
                 </li>
                 <li class="group pl-6">
-                  <span @click="triggerNavItem('#blog')" class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white">Blog</span>
+                  <span @click="triggerNavItem('#blog')" class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white">Article</span>
                   <span class="block h-0.5 w-full bg-transparent group-hover:bg-yellow"></span>
                 </li>
                 <li class="group pl-6">
@@ -93,7 +93,7 @@
                 <span @click="triggerMobileNavItem('#portfolio')" class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white">Portfolio</span>
               </li>
               <li class="py-2">
-                <span @click="triggerMobileNavItem('#blog')" class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white">Blog</span>
+                <span @click="triggerMobileNavItem('#blog')" class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white">Article</span>
               </li>
               <li class="py-2">
                 <span @click="triggerMobileNavItem('#contact')" class="cursor-pointer pt-0.5 font-header font-semibold uppercase text-white">Contact</span>
@@ -352,40 +352,40 @@
             <h2 class="text-center font-header text-4xl font-semibold uppercase text-primary sm:text-5xl lg:text-6xl"> See out my work </h2>
             <h3 class="pt-6 text-center font-header text-xl font-medium text-black sm:text-2xl lg:text-3xl"> Here's what I have done with the past </h3>
             <div class="mx-auto grid w-full grid-cols-1 gap-8 pt-12 sm:w-3/4 md:gap-10 lg:w-full lg:grid-cols-3">
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/go-fiber-clean-architecture" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/go-fiber.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/go-gin-clean-architecture" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/go-gin.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/example-api-nodejs" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/node-typescript.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/lumen10-api-restful" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/lumen.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/example-api-flask" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/python-flask.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/example-api-django" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/python-django.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/codeiginter4-api-restful" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/codeigniter.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/example-api-bun-elysia" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/bun-elysia.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/example-api-bun-hono" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/bun-hono.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/belajar-spring-dasar" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/springboot.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/exampleapidotnet9" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/dotnet-core.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
-              <a href="/" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+              <a href="https://gitlab.com/code-research1/laravel12-api-restful" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/laravel.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
             </div>
@@ -396,7 +396,7 @@
               <h2 class="text-center font-header text-4xl font-semibold uppercase text-primary sm:text-5xl lg:text-6xl"> I also like to write </h2>
               <div class="mx-auto grid w-full grid-cols-1 gap-6 pt-12 sm:w-3/4 lg:w-full lg:grid-cols-3 xl:gap-10">
                 <a href="/" class="shadow">
-                  <div style="background-image: url(/assets/img/write/nodekafka.PNG)" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
+                  <div style="background-image: url(/assets/img/write/kafka-node.PNG)" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
                     <span class="absolute inset-0 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to bg-cover bg-center bg-no-repeat opacity-10 transition-opacity group-hover:opacity-50"></span>
                     <span class="absolute right-0 bottom-0 mr-4 mb-4 block rounded-full border-2 border-white px-6 py-2 text-center font-body text-sm font-bold uppercase text-white md:text-base">Read More</span>
                   </div>
@@ -406,7 +406,7 @@
                   </div>
                 </a>
                 <a href="/" class="shadow">
-                  <div style="background-image: url(/assets/img/write/golangrabbitmq.PNG)" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
+                  <div style="background-image: url(/assets/img/write/rabbitmq-golang.PNG)" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
                     <span class="absolute inset-0 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to bg-cover bg-center bg-no-repeat opacity-10 transition-opacity group-hover:opacity-50"></span>
                     <span class="absolute right-0 bottom-0 mr-4 mb-4 block rounded-full border-2 border-white px-6 py-2 text-center font-body text-sm font-bold uppercase text-white md:text-base">Read More</span>
                   </div>
@@ -416,13 +416,13 @@
                   </div>
                 </a>
                 <a href="/" class="shadow">
-                  <div style="background-image: url(/assets/img/write/golangkafka.PNG)" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
+                  <div style="background-image: url(/assets/img/write/docker-laravel.PNG)" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
                     <span class="absolute inset-0 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to bg-cover bg-center bg-no-repeat opacity-10 transition-opacity group-hover:opacity-50"></span>
                     <span class="absolute right-0 bottom-0 mr-4 mb-4 block rounded-full border-2 border-white px-6 py-2 text-center font-body text-sm font-bold uppercase text-white md:text-base">Read More</span>
                   </div>
                   <div class="bg-white py-6 px-5 xl:py-8">
-                    <span class="block font-body text-lg font-semibold text-black">My year in review 2020</span>
-                    <span class="block pt-2 font-body text-grey-20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                    <span class="block font-body text-lg font-semibold text-black">Golang X Kafka</span>
+                    <span class="block pt-2 font-body text-grey-20">Oooppss.....</span>
                   </div>
                 </a>
               </div>
