--- a/index.html
+++ b/index.html
@@ -370,11 +370,20 @@
               <a href="https://gitlab.com/code-research1/example-api-django" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/python-django.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
+              <a href="https://gitlab.com/code-research1/example-api-express" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+                <img src="/assets/img/portofolio/node-express1.PNG" class="w-full shadow" alt="portfolio image" />
+              </a>
+              <a href="https://gitlab.com/code-research1/laravel8-clean-architecture" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+                <img src="/assets/img/portofolio/laravel-design-pattern.PNG" class="w-full shadow" alt="portfolio image" />
+              </a>
               <a href="https://gitlab.com/code-research1/codeiginter4-api-restful" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/codeigniter.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
               <a href="https://gitlab.com/code-research1/example-api-bun-elysia" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/bun-elysia.PNG" class="w-full shadow" alt="portfolio image" />
+              </a>
+              <a href="https://gitlab.com/code-research1/example-api-nestjs" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
+                <img src="/assets/img/portofolio/node-nest.PNG" class="w-full shadow" alt="portfolio image" />
               </a>
               <a href="https://gitlab.com/code-research1/example-api-bun-hono" target="_blank" class="mx-auto transform transition-all hover:scale-105 md:mx-0">
                 <img src="/assets/img/portofolio/bun-hono.PNG" class="w-full shadow" alt="portfolio image" />
@@ -395,7 +404,7 @@
             <div class="container py-16 md:py-20">
               <h2 class="text-center font-header text-4xl font-semibold uppercase text-primary sm:text-5xl lg:text-6xl"> I also like to write </h2>
               <div class="mx-auto grid w-full grid-cols-1 gap-6 pt-12 sm:w-3/4 lg:w-full lg:grid-cols-3 xl:gap-10">
-                <a href="/" class="shadow">
+                <a href="/assets/img/document/node expressjs kafka.pdf" target="_blank" class="shadow">
                   <div style="background-image: url(/assets/img/write/kafka-node.PNG)" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
                     <span class="absolute inset-0 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to bg-cover bg-center bg-no-repeat opacity-10 transition-opacity group-hover:opacity-50"></span>
                     <span class="absolute right-0 bottom-0 mr-4 mb-4 block rounded-full border-2 border-white px-6 py-2 text-center font-body text-sm font-bold uppercase text-white md:text-base">Read More</span>
@@ -405,24 +414,24 @@
                     <span class="block pt-2 font-body text-grey-20">Apache Kafka is a distributed streaming platform that can process data streams in real time...</span>
                   </div>
                 </a>
-                <a href="/" class="shadow">
-                  <div style="background-image: url(/assets/img/write/rabbitmq-golang.PNG)" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
+                <a href="https://gitlab.com/code-research1/rabbitmq/go-gin-rabbitmq" target="_blank" class="shadow">
+                  <div style="background-image: url(/assets/img/write/rabbitmq-golang.PNG)" target="_blank" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
                     <span class="absolute inset-0 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to bg-cover bg-center bg-no-repeat opacity-10 transition-opacity group-hover:opacity-50"></span>
-                    <span class="absolute right-0 bottom-0 mr-4 mb-4 block rounded-full border-2 border-white px-6 py-2 text-center font-body text-sm font-bold uppercase text-white md:text-base">Read More</span>
+                    <span class="absolute right-0 bottom-0 mr-4 mb-4 block rounded-full border-2 border-white px-6 py-2 text-center font-body text-sm font-bold uppercase text-white md:text-base">Download</span>
                   </div>
                   <div class="bg-white py-6 px-5 xl:py-8">
                     <span class="block font-body text-lg font-semibold text-black">Message Broker</span>
                     <span class="block pt-2 font-body text-grey-20">RabbitMQ is messaging middleware software that functions to send and receive messages...</span>
                   </div>
                 </a>
-                <a href="/" class="shadow">
-                  <div style="background-image: url(/assets/img/write/kafka-golang.PNG)" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
+                <a href="/assets/img/document/go gin kafka.pdf" class="shadow">
+                  <div style="background-image: url(/assets/img/write/kafka-golang.PNG)" target="_blank" class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72">
                     <span class="absolute inset-0 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to bg-cover bg-center bg-no-repeat opacity-10 transition-opacity group-hover:opacity-50"></span>
                     <span class="absolute right-0 bottom-0 mr-4 mb-4 block rounded-full border-2 border-white px-6 py-2 text-center font-body text-sm font-bold uppercase text-white md:text-base">Read More</span>
                   </div>
                   <div class="bg-white py-6 px-5 xl:py-8">
                     <span class="block font-body text-lg font-semibold text-black">Golang X Kafka</span>
-                    <span class="block pt-2 font-body text-grey-20">Oooppss.....</span>
+                    <span class="block pt-2 font-body text-grey-20">In this tutorial, we will be introduced to Kafka, which acts as a message broker. Kafka and Zookeeper will run.....</span>
                   </div>
                 </a>
               </div>
