--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="canonical" href="//" />
     <meta property="og:url" content="//" />
     <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
-    <link rel="icon" type="image/png" href="/assets/img/18496776.png" />
+    <link rel="icon" type="image/png" href="/assets/img/bayuwidiasantoso1.png" />
     <meta name="theme-color" content="#5540af" />
     <meta property="og:site_name" content="Atom Template" />
     <meta property="og:image" content="//assets/img/social.jpg" />
@@ -107,7 +107,7 @@
             <div class="container relative z-30 pt-20 pb-12 sm:pt-56 sm:pb-48 lg:pt-64 lg:pb-48">
               <div class="flex flex-col items-center justify-center lg:flex-row">
                 <div class="rounded-full border-8 border-primary shadow-xl">
-                  <img src="/assets/img/18496776.png" class="h-48 rounded-full sm:h-56" alt="author" />
+                  <img src="/assets/img/bayuwidiasantoso1.png" class="h-48 rounded-full sm:h-56" alt="author" />
                 </div>
                 <div class="pt-8 sm:pt-10 lg:pl-8 lg:pt-0">
                   <h1 class="text-center font-header text-4xl text-white sm:text-left sm:text-5xl md:text-6xl"> Hello, everyone! I'm Bayu Widia </h1>
