--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="canonical" href="//" />
     <meta property="og:url" content="//" />
     <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
-    <link rel="icon" type="image/png" href="/assets/img/bayuwidiasantoso1.png" />
+    <link rel="icon" type="image/png" href="/assets/img/elephant.png" />
     <meta name="theme-color" content="#5540af" />
     <meta property="og:site_name" content="Atom Template" />
     <meta property="og:image" content="//assets/img/social.jpg" />
@@ -155,7 +155,7 @@
           </div>
           <div class="container py-16 md:py-20" id="services">
             <h2 class="text-center font-header text-4xl font-semibold uppercase text-primary sm:text-5xl lg:text-6xl"> Here are my strong suits </h2>
-            <h3 class="pt-6 text-center font-header text-xl font-medium text-black sm:text-2xl lg:text-3xl"> 01000010 01100001 01111001 01110101 </h3>
+            <!-- <h3 class="pt-6 text-center font-header text-xl font-medium text-black sm:text-2xl lg:text-3xl"> 01000010 01100001 01111001 01110101 </h3> -->
             <div class="grid grid-cols-1 gap-6 pt-10 sm:grid-cols-2 md:gap-10 md:pt-12 lg:grid-cols-3">
               <div class="group rounded px-8 py-12 shadow hover:bg-primary">
                 <div class="mx-auto h-24 w-24 text-center xl:h-28 xl:w-28">
@@ -212,7 +212,7 @@
                 <div class="md:w-2/5">
                   <div class="flex justify-center md:justify-start">
                     <span class="shrink-0">
-                      <img src="/assets/img/experience/sm.jpg" class="h-auto w-32" alt="company logo" />
+                      <img src="/assets/img/experience/sm1.jpg" class="h-auto w-32" alt="company logo" />
                     </span>
                     <div class="relative ml-3 hidden w-full md:block">
                       <span class="absolute inset-x-0 top-1/2 h-0.5 -translate-y-1/2 transform bg-grey-70"></span>
@@ -226,9 +226,9 @@
                       <i class="bx bxs-right-arrow hidden text-primary md:block"></i>
                       <div class="md:-mt-1 md:pl-8">
                         <span class="block font-body font-bold text-grey-40">Aug 2022 - Present</span>
-                        <span class="block pt-2 font-header text-xl font-bold uppercase text-primary">Senior Developer</span>
+                        <span class="block pt-2 font-header text-xl font-bold uppercase text-primary">PT Surya Madistrindo</span>
                         <div class="pt-2">
-                          <span class="block font-body text-black"><b>Fullstack Developer</b> - <i>Jakarta, Indonesia</i></span>
+                          <span class="block font-body text-black"><b>Senior Developer</b> - <i>Jakarta, Indonesia</i></span>
                         </div>
                       </div>
                     </div>
@@ -239,7 +239,7 @@
                 <div class="md:w-2/5">
                   <div class="flex justify-center md:justify-start">
                     <span class="shrink-0">
-                      <img src="/assets/img/experience/maxx.png" class="h-auto w-32" alt="company logo" />
+                      <img src="/assets/img/experience/maxx.jpg" class="h-auto w-32" alt="company logo" />
                     </span>
                     <div class="relative ml-3 hidden w-full md:block">
                       <span class="absolute inset-x-0 top-1/2 h-0.5 -translate-y-1/2 transform bg-grey-70"></span>
@@ -253,7 +253,7 @@
                       <i class="bx bxs-right-arrow hidden text-primary md:block"></i>
                       <div class="md:-mt-1 md:pl-8">
                         <span class="block font-body font-bold text-grey-40">Mar 2022 - Aug 2022</span>
-                        <span class="block pt-2 font-header text-xl font-bold uppercase text-primary">Information Technology Supervisor</span>
+                        <span class="block pt-2 font-header text-xl font-bold uppercase text-primary">PT Maxx Coffee Prima</span>
                         <div class="pt-2">
                           <span class="block font-body text-black"><b>IT Supervisor Developer</b> - <i>Tangerang, Indonesia</i></span>
                         </div>
@@ -265,8 +265,8 @@
               <div class="mt-8 flex flex-col text-center md:flex-row md:text-left">
                 <div class="md:w-2/5">
                   <div class="flex justify-center md:justify-start">
-                    <span class="shrink-0">
-                      <img src="/assets/img/experience/linc.jpg" class="h-auto w-32" alt="company logo" />
+                    <span class="shrink-to-fit" style="margin-top: -10%;">
+                      <img src="/assets/img/experience/linc.jpg" class="h-auto w-24" alt="company logo" />
                     </span>
                     <div class="relative ml-3 hidden w-full md:block">
                       <span class="absolute inset-x-0 top-1/2 h-0.5 -translate-y-1/2 transform bg-grey-70"></span>
@@ -280,7 +280,7 @@
                       <i class="bx bxs-right-arrow hidden text-primary md:block"></i>
                       <div class="md:-mt-1 md:pl-8">
                         <span class="block font-body font-bold text-grey-40">Nov 2021 - Apr 2022</span>
-                        <span class="block pt-2 font-header text-xl font-bold uppercase text-primary">Full Stack Developer</span>
+                        <span class="block pt-2 font-header text-xl font-bold uppercase text-primary">PT. Cipta Mapan Logistik (Linc Group)</span>
                         <div class="pt-2">
                           <span class="block font-body text-black"><b>Fullstack Developer</b> - <i>Jakarta, Indonesia</i></span>
                         </div>
@@ -293,7 +293,7 @@
                 <div class="md:w-2/5">
                   <div class="flex justify-center md:justify-start">
                     <span class="shrink-0">
-                      <img src="/assets/img/experience/ramayana.png" class="h-auto w-32" alt="company logo" />
+                      <img src="/assets/img/experience/rals.png" class="h-auto w-32" alt="company logo" />
                     </span>
                     <div class="relative ml-3 hidden w-full md:block">
                       <span class="absolute inset-x-0 top-1/2 h-0.5 -translate-y-1/2 transform bg-grey-70"></span>
@@ -307,9 +307,9 @@
                       <i class="bx bxs-right-arrow hidden text-primary md:block"></i>
                       <div class="md:-mt-1 md:pl-8">
                         <span class="block font-body font-bold text-grey-40">May 2018 - Oct 2021</span>
-                        <span class="block pt-2 font-header text-xl font-bold uppercase text-primary">Information Technology Development Team Lead</span>
+                        <span class="block pt-2 font-header text-xl font-bold uppercase text-primary">PT Ramayana Lestari Sentosa Tbk</span>
                         <div class="pt-2">
-                          <span class="block font-body text-black"><b>Fullstack Developer</b> - <i>Jakarta, Indonesia</i></span>
+                          <span class="block font-body text-black"><b>IT Developer Team Lead</b> - <i>Jakarta, Indonesia</i></span>
                         </div>
                       </div>
                     </div>
@@ -334,7 +334,7 @@
                       <i class="bx bxs-right-arrow hidden text-primary md:block"></i>
                       <div class="md:-mt-1 md:pl-8">
                         <span class="block font-body font-bold text-grey-40">Mar 2014 - Dec 2017</span>
-                        <span class="block pt-2 font-header text-xl font-bold uppercase text-primary">Information Technology Developer</span>
+                        <span class="block pt-2 font-header text-xl font-bold uppercase text-primary">PT Smartekno Solusi Bisnis</span>
                         <div class="pt-2">
                           <span class="block font-body text-black"><b>Fullstack Developer</b> - <i>Jakarta, Indonesia</i></span>
                         </div>
